<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_profile_logged_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".app_fragments.ProfileLoggedInFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_round"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_profile"
            android:textAlignment="center"
            android:textColor="@color/dark_green"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/plif_uname_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:hint="@string/lbl_username"
            android:textColorHint="@color/input_green"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/modern_entry_border"
            app:hintTextColor="@color/input_green"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/plif_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/plif_pass_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:hint="@string/lbl_password"
            android:textColorHint="@color/input_green"
            app:boxStrokeColor="@color/modern_entry_border"
            app:endIconDrawable="@drawable/design_password_eye"
            app:hintTextColor="@color/input_green"
            app:passwordToggleDrawable="@drawable/design_password_eye"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/plif_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:inputType="textPassword"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/plif_ep_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:enabled="false"
            android:hint="@string/lbl_ep_name"
            android:textColorHint="@color/input_green"
            app:boxStrokeColor="@color/modern_entry_border"
            app:hintTextColor="@color/input_green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/plif_endpoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <Button
                android:id="@+id/plif_logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btn_blue"
                android:text="@string/logout_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/plif_edit_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btn_blue"
                android:text="@string/edit_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/plif_save_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btn_blue"
                android:text="@string/save_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/plif_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/btn_red"
            android:gravity="center"
            android:text="@string/delete_acc_text" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>